--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(Pico_Game_Controller
         pico_game_controller.c
-        usb_descriptors.c)
+        usb_descriptors.c
+		nfc.c pn532.c)
 
 target_include_directories(Pico_Game_Controller PRIVATE ${CMAKE_CURRENT_LIST_DIR})
 
@@ -15,7 +16,13 @@ target_link_libraries(Pico_Game_Controller PRIVATE
         tinyusb_board
         hardware_pio
         hardware_dma
-        hardware_irq)
+        hardware_irq
+		hardware_pwm
+		hardware_adc
+		hardware_i2c
+		hardware_spi
+		hardware_watchdog
+		pico_unique_id)
 
 pico_add_extra_outputs(Pico_Game_Controller)
 
